# SimplePrototypeIMBS

./: .gn  BUILD.gn  LICENSE  README.md
HTMLServer/: BUILD.gn
build_cfg/: BUILD.gn  BUILDCONFIG.gn
dataEntities/: BUILD.gn  Movie.cpp  Movie.hpp  Seat.cpp  Seat.hpp  Theater.cpp  Theater.hpp  TheaterShow.cpp  TheaterShow.hpp  Ticket.cpp  Ticket.hpp
interaction/: BUILD.gn  TheaterMgr.cpp  TheaterMgr.hpp
server/: BUILD.gn  TheaterMgrServer.cpp  TheaterMgrServer.hpp
test/: BUILD.gn  testDataEntities.cpp  testInteraction.cpp
util/: BUILD.gn  TimeUtil.hpp
