static_library("dataEntities") {
  sources = [
    "Movie.cpp",
    "Movie.hpp",
    "Seat.cpp",
    "Seat.hpp",
    "Theater.cpp",
    "Theater.hpp",
    "TheaterShow.cpp",
    "TheaterShow.hpp",
    "Ticket.cpp",
    "Ticket.hpp",
  ]
  include_dirs = [ ".", "//util", ]
  
  deps = [
    "//util:util",
  ]
} 
