executable("testDataEntities") {
  sources = [
    "testDataEntities.cpp",
  ]
  
  include_dirs = [
    "//dataEntities",
    "//util",
  ]
  
  deps = [
    "//util:util",
    "//dataEntities:dataEntities",
  ]
}

executable("testInteraction") {
  sources = [
    "testInteraction.cpp",
  ]
  
  include_dirs = [
    "//interaction",
    "//dataEntities",
    "//util",
  ]
  
  deps = [
    "//util:util",
    "//interaction:interaction",
  ]
}
